<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_text"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorOnBackground"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provide_details_text"
            android:textSize="16sp"
            android:textColor="@color/colorOnBackground"/>






        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="14sp"
            android:textColor="@color/colorOnBackground"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_example"
            android:textColorHint="@color/light_gray_1"
            android:importantForAutofill="no"
            android:textColor="@color/colorOnBackground"
            android:inputType="textEmailAddress"/>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="14sp"
            android:textColor="@color/colorOnBackground"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_example"
            android:textColorHint="@color/light_gray_1"
            android:textColor="@color/colorOnBackground"
            android:importantForAutofill="no"
            android:layout_marginBottom="16dp"/>


        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_label"
            android:backgroundTint="@color/primary"
            app:cornerRadius="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account_text"
                android:textSize="16sp"
                android:textColor="@color/colorOnBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:layout_marginStart="8dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>